<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-3dp">


    <EditText
        android:id="@+id/editTextCazuelaCantidad"
        android:layout_width="199dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:fontFamily="serif"
        android:hint="@string/cantidad_cazuela"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorLink="#E91E63"
        app:layout_constraintStart_toEndOf="@+id/imageCazuela"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="328dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="91dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:text="10% sug."
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewPropina"
        tools:layout_editor_absoluteY="545dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ImageView
        android:id="@+id/imagePastel"
        android:layout_width="128dp"
        android:layout_height="99dp"
        android:contentDescription="@string/Todo"
        app:srcCompat="@drawable/pastel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="180dp" />

    <ImageView
        android:id="@+id/imageCazuela"
        android:layout_width="135dp"
        android:layout_height="97dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/cazuela"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="328dp" />

    <Switch
        android:id="@+id/switchPropina"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:text="@string/incluir_propina"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteY="545dp" />

    <TextView
        android:id="@+id/textViewPastelPrecio"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/precio_pastel_0"
        android:textAlignment="inherit"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="195dp" />

    <TextView
        android:id="@+id/textViewCazuelaPrecio"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/precio_cazuela_0"
        android:textAlignment="inherit"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        tools:layout_editor_absoluteX="197dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSubtotal"
        android:layout_width="83dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/subtotal_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewPastelPrecio"
        app:layout_constraintTop_toBottomOf="@+id/textViewCazuelaPrecio" />

    <TextView
        android:id="@+id/textViewPropina"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/propina_0"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtotal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="263dp" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/total_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewSubtotal"
        app:layout_constraintTop_toBottomOf="@+id/textViewPropina" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="539dp" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="351dp"
        android:layout_height="169dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@drawable/logo_restaur_removebg_preview"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="6dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/editTextPastelCantidad"
        tools:layout_editor_absoluteX="198dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="@+id/editTextCazuelaCantidad"
        tools:layout_editor_absoluteX="197dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/ValorNeto"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/neto"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSubtotal"
        tools:layout_editor_absoluteY="504dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:text="@string/totale"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotal"
        tools:layout_editor_absoluteY="592dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPastelCantidad"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:autofillHints=""
        android:fontFamily="serif"
        android:hint="@string/cantidad_pastel_de_choclo"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/imagePastel"
        tools:layout_editor_absoluteY="180dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
